--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
       </a>
 
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/posts">Главная</a>
+        <a class="me-3 btn btn-warning" href="/posts" class="me-3 btn btn-warning">Главная</a>
         <a class="me-3 btn btn-warning" href="/create-article" class="me-3 btn btn-warning">Добавить статью</a>
       </nav>
     </div>
