--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -11,9 +11,10 @@
 
         <div class="alert alert-info">
             <p>{{ article.intro }}</p>
+            <p>{{ article.text }}</p>
             <p><b>Дата:{{ article.date.date() }}</b></p>
-            <a href="/posts/{{ article.id }}/delete" class="btn btn-warning">Удалить</a>
-            <a href="/posts/{{ article.id }}/update" class="btn btn-warning">Редактирование</a>
+            <a href="/posts/{{ article.id }}/delete" class="btn btn-danger">Удалить</a>
+            <a href="/posts/{{ article.id }}/update" class="btn btn-success">Редактирование</a>
         </div>
     </div>
 
